--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             <option value="expense" selected>Expense</option>
                             <option value="income">Income</option>
                             <option value="refund">Refund</option>
-                            <!-- Add Transfer later if needed, more complex -->
+                            <option value="transfer">Transfer</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -209,12 +209,16 @@
                             <!-- Options populated by JS -->
                         </select>
                     </div>
-                     <div class="form-group">
-                        <label for="tx-payee">Payee:</label>
+                    <div class="form-group" id="payee-group">
+                        <label for="tx-payee" id="payee-label">Payee:</label> <!-- Label will change -->
                         <input type="text" id="tx-payee" placeholder="e.g., Coffee Shop">
+                        <select id="tx-transfer-to-account" class="hidden" required> <!-- Initially hidden dropdown for "To" Account -->
+                            <option value="">-- Select Destination Account --</option>
+                            <!-- Options populated by JS -->
+                        </select>
                     </div>
-                    <div class="form-group">
-                        <label for="tx-category">Category:</label>
+                    <div class="form-group" id="category-group"> 
+                        <label for="tx-category" id="category-label">Category:</label> 
                         <select id="tx-category" required>
                              <option value="">-- Select Category --</option>
                             <!-- Options populated by JS, excluding Savings/Archived? -->
