--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </div>
                         <div class="form-group">
                             <label for="new-account-balance">Starting Balance:</label>
-                            <input type="number" id="new-account-balance" step="0.01" placeholder="e.g., 1500,50 or -500" required  inputmode="decimal">
+                            <input type="text" id="new-account-balance" step="0.01" placeholder="e.g., 1500,50 or -500" required  inputmode="decimal" autocomplete="off">
                         </div>
                         <div class="form-group">
                             <button type="submit" class="button">Add Account</button>
@@ -256,7 +256,7 @@
                     </div>
                     <div class="form-group">
                         <label for="tx-amount">Amount:</label>
-                        <input type="number" id="tx-amount" step="0.01" min="0.01" required placeholder="e.g., 5,25"  inputmode="decimal">
+                        <input type="text" id="tx-amount" required placeholder="e.g., 5,50" inputmode="decimal" autocomplete="off">
                     </div>
 
                 </div>
