Fix: Account decimal starting balance

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </div>
                         <div class="form-group">
                             <label for="new-account-balance">Starting Balance:</label>
-                            <input type="text" id="new-account-balance" step="0.01" placeholder="e.g., 1500,50 or -500" required  inputmode="decimal" autocomplete="off">
+                            <input type="text" id="new-account-balance" placeholder="e.g., 1500,50 or -500" required  inputmode="decimal" autocomplete="off">
                         </div>
                         <div class="form-group">
                             <button type="submit" class="button">Add Account</button>
