Fix: Menu reorder

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <nav id="side-menu" class="side-menu">
         <button id="menu-close" class="menu-close-button" aria-label="Close Menu">×</button>
         <ul>
-            <li><a href="#dashboard-summary" class="nav-link" data-section="dashboard-summary">Dashboard</a></li>
-            <li><a href="#budget-view" class="nav-link" data-section="budget-view">Budget </a></li>
-            <li><a href="#charts-section" class="nav-link" data-section="charts-section">Charts</a></li>
-            <li><a href="#yearly-summary-section" class="nav-link" data-section="yearly-summary-section">Yearly Summary</a></li> 
-            <li><a href="#add-expense-form" class="nav-link" data-section="add-expense-form">Add Entry</a></li>
-            <li><a href="#transactions-list" class="nav-link" data-section="transactions-list">Transactions</a></li>
+            <li><a href="#add-expense-form" class="nav-link" data-section="add-expense-form">Add Income/Expense</a></li>
+            <li><a href="#transactions-list" class="nav-link" data-section="transactions-list">Income/Expenses</a></li>
             <li><a href="#manage-accounts-section" class="nav-link" data-section="manage-accounts-section">Manage Accounts</a></li>
             <li><a href="#manage-categories-section" class="nav-link" data-section="manage-categories-section">Manage Categories</a></li>
+            <li><a href="#budget-view" class="nav-link" data-section="budget-view">Budget </a></li>
+            <li><a href="#dashboard-summary" class="nav-link" data-section="dashboard-summary">Dashboard</a></li>
+            <li><a href="#charts-section" class="nav-link" data-section="charts-section">Chart</a></li>
+            <li><a href="#yearly-summary-section" class="nav-link" data-section="yearly-summary-section">Yearly Summary</a></li> 
             <li><a href="#sync-section" class="nav-link" data-section="sync-section">Import/Export Data</a></li>
         </ul>
     </nav>
