Feat: starting data

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button id="menu-close" class="menu-close-button" aria-label="Close Menu">×</button>
         <ul>
             <li><a href="#add-expense-form" class="nav-link" data-section="add-expense-form">Add Income/Expense</a></li>
-            <li><a href="#transactions-list" class="nav-link" data-section="transactions-list">Income/Expenses</a></li>
+            <li><a href="#transactions-list" class="nav-link" data-section="transactions-list">Transactions</a></li>
             <li><a href="#manage-accounts-section" class="nav-link" data-section="manage-accounts-section">Accounts</a></li>
             <li><a href="#manage-categories-section" class="nav-link" data-section="manage-categories-section">Categories</a></li>
             <li><a href="#budget-view" class="nav-link" data-section="budget-view">Budget </a></li>
