Fix: button styles

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <input type="text" id="new-account-balance" placeholder="e.g., 1500,50 or -500" required  inputmode="decimal" autocomplete="off">
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="button">Add Account</button>
+                            <button type="submit" class="button button-primary-action">Add Account</button>
                         </div>
                     </div>
                     <div id="add-account-status" style="margin-top: 10px;"></div>
@@ -99,7 +99,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="button">Add Category</button>
+                        <button type="submit" class="button button-primary-action">Add Category</button>
                     </div>
                 </div>
                 <div id="add-category-status" style="margin-top: 10px;"></div>
@@ -274,7 +274,7 @@
                      <label for="tx-memo">Memo (Optional):</label>
                      <textarea id="tx-memo" rows="2"></textarea>
                  </div>
-                 <button type="submit" class="button">Add Transaction</button>
+                 <button type="submit" class="button button-primary-action">Add Transaction</button>
                  <div id="add-tx-status" style="margin-top: 10px;"></div>
             </form>
         </section>
@@ -329,7 +329,7 @@
                         <input type="date" id="filter-end-date">
                     </div>
                     <div class="form-group">
-                        <button type="button" id="reset-filters" class="button button-secondary">Reset Filters</button>
+                        <button type="button" id="reset-filters" class="button button-primary-action">Reset Filters</button>
                     </div>
                 </div>
             </div>
