--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
     </nav>
     <div id="overlay" class="overlay"></div>
     <main class="container">
+        <section id="welcome-guide" class="main-section hidden card" style="background-color: #e9f5ff; border-color: #b3d7ff;"> <!-- Initially hidden, styled like a card -->
+            <h2>Welcome to Zero Budget! 👋</h2>
+            <p>Ready to take control of your finances? Here's how to get started:</p>
+            <ol style="margin-left: 20px; margin-bottom: 20px;">
+                <li><strong>Add Your Accounts:</strong> List checking, savings, credit cards, and cash accounts with their current balances.</li>
+                <li><strong>Define Your Categories:</strong> Set up categories for your spending (like Groceries, Rent, Dining Out) and income sources.</li>
+                <li><strong>Start Budgeting:</strong> Once you have income, assign money to your categories in the 'Budget' view.</li>
+                <li><strong>Track Transactions:</strong> Record your spending and income as they happen.</li>
+            </ol>
+            <p>Let's set up your foundation:</p>
+            <div style="display: flex; gap: 15px; flex-wrap: wrap;">
+                <button id="welcome-go-accounts" class="button button-primary-action" style="flex-grow: 1;">Go to Accounts</button>
+                <button id="welcome-go-categories" class="button button-primary-action" style="flex-grow: 1;">Go to Categories</button>
+                <button id="welcome-dismiss" class="button button-secondary" style="flex-basis: 100%; margin-top: 10px;">Cancel</button>
+            </div>
+        </section>
         <section id="manage-accounts-section" class="main-section hidden card">
             <h2>Manage Accounts</h2>
 
